# rust-aoc

./: Cargo.toml  README.md
src/: day2.rs  main.rs
src/2015/: day1.rs  main.rs
src/2022/: day1.rs  day2.rs  day3.rs  main.rs
src/2023/: day2.zig
