[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "2022"


[[bin]]
name = "2022"
path = "./src/2022/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { version = "0.4.1", features = ["bench"] }

[profile.release]
lto = "fat"
